minor changes. About to install font-awesome

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WDI Project 4</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdt3_QdEgpa5LDVoWkzgB10fsiKfSKNDM&libraries=places"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
